--- a/survey-app/src/App.css
+++ b/survey-app/src/App.css
@@ -316,21 +316,23 @@ a:focus {
 .input-group {
   display: flex;
   flex-direction: column;
-  align-items: center; /* centers the content */
-  width: 50%; /* or any specific measurement or max-width */
+  align-items: flex-start; /* Aligns items to the start of the container */
+  width: 50%; /* Adjust based on your preference */
   margin-bottom: 15px;
 }
 
 .input-group label {
-  display: block;
+  display: block; /* Takes up the full line */
+  text-align: left; /* Ensures the text is left-aligned */
   margin-bottom: 5px;
   font-weight: bold;
-  align-items: left;
+  width: 100%; /* Makes the label take up the full width of the container */
+  /* No need for 'align-items' here, as it doesn't apply */
 }
 
 .input-group input,
 .input-group select {
-  width: 100%; /* makes sure inputs/selects take full width of .input-group */
+  width: 100%; /* Takes up the full width of the container */
   padding: 10px;
   border: 1px solid #cccccc;
   border-radius: 5px;
